[edit] fix maria img not showing after section prb

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ p {
 
 /* HOME */
 #home {
+  z-index: 3;
   width: 100%;
   margin: auto;
   display: grid;
